# school-events-be

./: .env  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
backend/app/: pyproject.toml
backend/app/app/: context_manager.py  database.py  db.py  dependencies.py  event_listeners.py  main.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/data_adapter/: __init__.py  attachment.py  email_log.py  event.py  log.py  notification.py  report.py  reservation.py  school.py  user.py  user_notification.py  waiting_list.py
backend/app/app/logger/: __init__.py
backend/app/app/models/: attachment.py  email_log.py  event.py  get_params.py  log.py  notification.py  report.py  reservation.py  response.py  school.py  statistics.py  user.py  waiting_list.py
backend/app/app/service/: email_service.py  event_service.py  event_statistic_service.py  log_service.py  report_service.py  reservation_service.py  (+2 more)
backend/app/logs/: all.log.2024-08-13  all.log.2024-08-14  all.log.2024-08-15  all.log.2024-08-16  all.log.2024-08-17  all.log.2024-08-19  all.log.2024-08-20  all.log.2024-08-21  all.log.2024-08-22  all.log.2024-08-23  all.log.2024-08-24  all.log.2024-08-25  all.log.2024-08-26  all.log.2024-08-27  all.log.2024-08-28  all.log.2024-08-29  all.log.2024-08-30  all.log.2024-08-31  all.log.2024-09-01  all.log.2024-09-02  all.log.2024-09-03  all.log.2024-09-04  all.log.2024-09-05  all.log.2024-09-10  all.log.2024-10-15  all.log.2024-10-16  all.log.2024-10-17  all.log.2024-10-18  all.log.2024-10-20  all.log.2024-10-23  all.log.2024-10-24
(+23 files in other folders)
